--- a/6 - Visualisation/Validation-Report.Rmd
+++ b/6 - Visualisation/Validation-Report.Rmd
@@ -24,6 +24,7 @@ knitr::opts_chunk$set(dpi=200)
 library(readr)
 library(ggplot2)
 library(lubridate)
+library(plyr)
 library(dplyr)
 library(car)
 library(tidyr)
@@ -177,7 +178,8 @@ t2<-`max_attribs_start` %>%
   filter(!grepl("Open|Full",key)) %>% 
   arrange(replication) %>% 
   pivot_wider(names_from="key",values_from="value",values_fill=list(value=0))
-t3<-t-t2
+cols<-sort(intersect(names(t),names(t2)))
+t3<-t[cols]-t2[cols]
 t3$replication<-t$replication
 max_attribs<-pivot_longer(t3,-replication,names_to="key",values_to="value")
 
@@ -214,5 +216,63 @@ print(ggplot(cancellations,aes(x=key,y=value,fill=key)) +
         labs(x="",y="Per year") +
         theme(axis.text.x=element_blank(),axis.title.x=element_blank(),axis.title.y=element_blank())+
         ggtitle("Baseline vs Real Cancellations") )
+
+```
+```{r}
+patients$datet<-as.POSIXct(patients$Date,format="%d %b %Y")
+
+
+patientsdays<-as.data.frame(table(cut(patients$datet,"1 day")))
+
+## resampling with windows
+
+patientsdays$date=as.Date(as.character(patientsdays$Var1))
+
+first<-min(patientsdays$date)
+last<-max(patientsdays$date)-365
+
+test<-ldply(lapply(1:48, function(i) {
+  windowstart<-runif(1,min=first,max=last)
+  pdtemp<-filter(patientsdays,date>=windowstart & date<=windowstart+365)
+  t<-pdtemp[sample(nrow(pdtemp),365,replace=TRUE),]
+  sum(t$Freq)
+}),data.frame)
+
+
+names(test)<-"value"
+test$key<-"Resampled Real OTD Cancellations"
+
+
+max_patients$key<-"OTD Cancellations"
+#print(ggplot(max_patients,aes(x=key,y=n,fill=key)) + geom_boxplot() + stat_summary(fun.y=mean, geom="point", shape=23,size=6)+ theme_bw(base_size=16) )
+
+temp<-filter(max_attribs,key=="Elective_OTD_Cancellations") %>% 
+  subset(select=-c(replication))
+temp$key<-"Model OTD Cancellations"
+#temp2<-subset(max_patients,select=-c(`Fin Year`)) %>%
+#  dplyr::rename(value=n)
+#temp2$key<-"Real OTD Cancellations"
+#cancellations<-bind_rows(temp,temp2)
+
+cancellations<-bind_rows(temp,test)
+
+# print(
+#   ggplot(cancellations,aes(x=key,y=value,fill=key)) +
+#     geom_dotplot(binaxis="y",stackdir="center") +
+#     stat_summary(fun.y=mean, geom="point", shape=23,size=6)+
+#     guides(fill=FALSE)+
+#     labs(x="",y="Per year") +
+#     theme_bw(base_size=12)
+# )
+
+
+print(ggplot(cancellations,aes(x=key,y=value,fill=key)) +
+        geom_dotplot(binaxis="y",stackdir="center") +
+        stat_summary(fun.y=mean, geom="point", shape=23,size=6) +
+        theme_bw(base_size=12)+
+        labs(x="",y="Per year") +
+        theme(axis.text.x=element_blank(),axis.title.x=element_blank(),axis.title.y=element_blank())+
+        ggtitle("Baseline vs Resampled Real Cancellations") )
+
 
 ```
